--- a/inicio.html
+++ b/inicio.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="imagenes/favicon1.ico" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/inicio.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
@@ -35,6 +36,7 @@
                     <li class="nav-item"><a href="inicio.html" class="nav-link active">Inicio</a></li>
                     <li class="nav-item"><a href="institucional.html" class="nav-link">Institucional</a></li>
                     <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
+                    <li class="nav-item"><a href="especialidades.html" class="nav-link">Especialidades</a></li>
                     <li class="nav-item"><a href="turnos.html" class="nav-link">Solicitar Turno</a></li>
                 </ul>
             </nav>
@@ -219,8 +221,9 @@
         <div>
           <p>&copy; 2025 Vita Kids S.A - Todos los derechos reservados.</p>
         </div>
-    </footer>    
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    </footer>  
+      
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
 </html>
