ajustes en html y css

--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
 </head>
     
     <body>    
-       <header class="navbar navbar-expand-lg">
+        <header class="navbar navbar-expand-lg">
         <div class="container-fluid">
             
             <!-- Logo + Título -->
@@ -34,8 +34,9 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="inicio.html" class="nav-link">Inicio</a></li>
                     <li class="nav-item"><a href="institucional.html" class="nav-link">Institucional</a></li>
-                    <li class="nav-item"><a href="contacto.html" class="nav-link  active">Contacto</a></li>
+                    <li class="nav-item"><a href="contacto.html" class="nav-link active">Contacto</a></li>
                     <li class="nav-item"><a href="especialidades.html" class="nav-link">Especialidades</a></li>
+                    <li class="nav-item"><a href="obras-sociales.html" class="nav-link">Obras Sociales</a></li>
                     <li class="nav-item"><a href="turnos.html" class="nav-link">Solicitar Turno</a></li>
                 </ul>
             </nav>
