--- a/institucional.html
+++ b/institucional.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <header class="navbar navbar-expand-lg">
+   <header class="navbar navbar-expand-lg">
         <div class="container-fluid">
             
             <!-- Logo + Título -->
@@ -38,6 +38,7 @@
                     <li class="nav-item"><a href="institucional.html" class="nav-link active">Institucional</a></li>
                     <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
                     <li class="nav-item"><a href="especialidades.html" class="nav-link">Especialidades</a></li>
+                    <li class="nav-item"><a href="obras-sociales.html" class="nav-link">Obras Sociales</a></li>
                     <li class="nav-item"><a href="turnos.html" class="nav-link">Solicitar Turno</a></li>
                 </ul>
             </nav>
