--- a/turnos.html
+++ b/turnos.html
@@ -38,12 +38,12 @@
                     <li class="nav-item"><a href="institucional.html" class="nav-link">Institucional</a></li>
                     <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
                     <li class="nav-item"><a href="especialidades.html" class="nav-link">Especialidades</a></li>
-                    <li class="nav-item"><a href="turnos.html" class="nav-link active">Solicitar Turno</a></li>
+                    <li class="nav-item"><a href="obras-sociales.html" class="nav-link">Obras Sociales</a></li>
+                    <li class="nav-item"><a href="turnos.html" class="nav-link  active">Solicitar Turno</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <hr>
     
    <main class="container">
     <div class="row justify-content-center">
