Arreglos en estilos css y archivos html

--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VITA KIDS - Inicio</title>
+    <title>VITA KIDS - Contacto</title>
     <link rel="icon" href="imagenes/favicon1.ico" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
@@ -50,7 +50,7 @@
             <div class="card border-0 shadow-lg">
                 <div class="card-body p-0">
                     <div class="row g-0">
-                        <div class="col-md-5 bg-primary text-white p-4 p-md-5 rounded-start">
+                        <div class="col-md-5 bg-success text-white p-4 p-md-5 rounded-start">
                             <h3 class="fw-bold mb-4">Información de Contacto</h3>
                             <p class="mb-3">
                                 <i class="fas fa-map-marker-alt me-2"></i>
@@ -86,7 +86,7 @@
                                 </div>
 
                                 <div class="d-grid">
-                                    <button class="btn btn-primary btn-lg btn-consulta" type="submit">
+                                    <button class="btn btn-success btn-lg btn-consulta" type="submit">
                                         <i class="fas fa-paper-plane me-2"></i> Enviar Consulta
                                     </button>
                                 </div>
