--- a/institucional.html
+++ b/institucional.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VITA KIDS - Inicio</title>
+    <title>VITA KIDS - Institucional</title>
     <link rel="icon" href="imagenes/favicon1.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,14 +61,14 @@
         <div class="row text-center">
             <div class="col-md-6 mb-4">
                 <div class="p-4 border rounded-3 h-100 shadow-sm">
-                    <i class="fas fa-bullseye fa-3x text-primary mb-3"></i>
+                    <i class="fas fa-bullseye fa-3x mb-3" style="color: #388E3C"></i>
                     <h2 class="h3">Misión</h2>
                     <p>Ofrecer servicios de salud y desarrollo infantil con calidad, calidez y compromiso, promoviendo el bienestar integral de cada niño y su familia.</p>
                 </div>
             </div>
             <div class="col-md-6 mb-4">
                 <div class="p-4 border rounded-3 h-100 shadow-sm">
-                    <i class="fas fa-eye fa-3x text-info mb-3"></i>
+                    <i class="fas fa-eye fa-3x mb-3" style="color: #388E3C"></i>
                     <h2 class="h3">Visión</h2>
                     <p>Ser un centro reconocido por su excelencia en atención pediátrica y terapéutica, contribuyendo al desarrollo pleno de la infancia en nuestra comunidad.</p>
                 </div>
