--- a/obras-sociales.html
+++ b/obras-sociales.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
-<body class="body2">
+<body>
     <!-- HEADER / NAVBAR -->
    <header class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -123,4 +123,5 @@
           
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
