--- a/turnos.html
+++ b/turnos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VITA KIDS - Inicio</title>
+    <title>VITA KIDS - Turnos</title>
     <link rel="icon" href="imagenes/favicon1.ico" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/inicio.css">
@@ -49,7 +49,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-10">
             <div class="text-center mb-5">
-                <i class="fas fa-calendar-check fa-3x text-primary mb-3"></i>
+                <i class="fas fa-calendar-check fa-3x mb-3" style="color: #388E3C"></i>
                 <h1 class="fw-bold">Solicitud de Turno Médico</h1>
                 <p class="lead text-muted">Completá el siguiente formulario para solicitar tu turno de manera rápida y sencilla.</p>
             </div>
@@ -109,7 +109,7 @@
                         </div>
 
                         <div class="col-12 text-center">
-                            <button type="submit" class="btn btn-primary btn-lg px-5 mt-3">
+                            <button type="submit" class="btn btn-lg px-5 mt-3" style="background-color: #388E3C; color: #fff;">
                                 <i class="fas fa-paper-plane me-2"></i> Enviar Solicitud
                             </button>
                         </div>
