--- a/turnos.html
+++ b/turnos.html
@@ -72,12 +72,19 @@
                         <div class="col-md-12">
                             <div class="form-floating">
                                 <select class="form-select" id="obra-social" name="obra-social" required>
-                                    <option value="" disabled selected>Seleccioná una opción...</option>
+                                    <option value="" disabled selected>Seleccioná una obra social...</option>
                                     <option value="ninguna">Particular (Sin Obra Social)</option>
                                     <option value="osde">OSDE</option>
                                     <option value="swiss">Swiss Medical</option>
                                     <option value="galeno">Galeno</option>
-                                    <option value="pami">PAMI</option>
+                                    <option value="ospe">OSPE</option>
+                                    <option value="osdipp">OSDIPP</option>
+                                    <option value="ostig">OSTIG</option>
+                                    <option value="medife">Medifé</option>
+                                    <option value="accord">Accord Salud</option>
+                                    <option value="sancor">Sancor Salud</option>
+                                    <option value="osecac">OSECAC</option>
+                                    <option value="omint">OMINT</option>
                                 </select>
                                 <label for="obra-social">Obra Social / Prepaga</label>
                             </div>
@@ -87,18 +94,24 @@
                             <div class="form-floating">
                                 <select class="form-select" id="especialidad" name="especialidad" required>
                                     <option value="" disabled selected>Seleccioná una especialidad...</option>
-                                    <option value="clinica">Clínica Médica</option>
-                                    <option value="cardiologia">Cardiología</option>
-                                    <option value="dermatologia">Dermatología</option>
-                                    <option value="pediatria">Pediatría</option>
+                                    <option value="pediatria">Pediatría general</option>
+                                    <option value="cardiologia">Cardiología Pediátrica</option>
+                                    <option value="neurologia">Neurología Pediátrica</option>
+                                    <option value="psicologia">Psicología infantil</option>
+                                    <option value="psicopedagogia">Psicopedagogía</option>
+                                    <option value="fonoaudiologia">Fonoaudiología</option>
+                                    <option value="oftalmologia">Oftalmología</option>
+                                    <option value="fisioterapia">Fisioterapia infantil</option>
+                                    <option value="odontopediatria">Odontopediatría</option>
+                                    <option value="nutricion">Nutrición infantil</option>
                                 </select>
-                                <label for="especialidad">Especialidad</label>
+                                <label for="especialidad">Especialidad</label> 
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="form-floating">
-                                <input type="date" class="form-control" id="fecha" name="fecha" required>
+                            <div class="mb-3">
                                 <label for="fecha">Fecha Deseada</label>
+                                <input type="date" class="form-control" id="fecha" name="fecha" required> 
                             </div>
                         </div>
                         <div class="col-md-12">
@@ -141,7 +154,7 @@
     </footer>    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    
 </body>
 
 </html>
