agrego cards de obras sociales

--- a/obras-sociales.html
+++ b/obras-sociales.html
@@ -95,8 +95,39 @@
                     <img src="imagenes/medife.png" alt="Medifé" class="img-fluid">
                 </a>
             </div>
-                </div>
-        </section>
+
+
+            <div class="col">
+                <a href="https://medicus.com.ar/" target="_blank" class="logo-card">
+                    <img src="imagenes/medicus.png" alt="Medicus" class="img-fluid">
+                </a>
+            </div>
+             <div class="col">
+                <a href="https://www.ospesalud.com.ar/" target="_blank" class="logo-card">
+                    <img src="imagenes/ospe.png" alt="OSPE" class="img-fluid">
+                </a>
+            </div>
+
+             <div class="col">
+                <a href="https://www.sancorsalud.com.ar/" target="_blank" class="logo-card">
+                    <img src="imagenes/Sancor salud.png" alt="Sancor Salud" class="img-fluid">
+                </a>
+            </div>
+
+            <div class="col">
+                <a href="https://ostig.com.ar/" target="_blank" class="logo-card">
+                    <img src="imagenes/ostig.png" alt="ostig" class="img-fluid">
+                </a>
+            </div>
+
+             <div class="col">
+                <a href="https://www.accordsalud.com.ar/" target="_blank" class="logo-card">
+                    <img src="imagenes/accord.png" alt="accord" class="img-fluid">
+                </a>
+            </div>
+        </div>
+
+    </section>
 
 
   <footer class="footer">
