--- a/obras-sociales.html
+++ b/obras-sociales.html
@@ -35,10 +35,15 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="inicio.html" class="nav-link">Inicio</a></li>
                     <li class="nav-item"><a href="institucional.html" class="nav-link">Institucional</a></li>
-                    <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
                     <li class="nav-item"><a href="especialidades.html" class="nav-link">Especialidades</a></li>
                     <li class="nav-item"><a href="obras-sociales.html" class="nav-link active">Obras Sociales</a></li>
+                    <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
                     <li class="nav-item"><a href="turnos.html" class="nav-link">Solicitar Turno</a></li>
+                    <li class="nav-item">
+                        <a href="login.html" class="nav-link">
+                          <i class="fas fa-user-circle fa-lg"></i> <span class="ms-1">LogIn</span>
+                        </a>
+                    </li> 
                 </ul>
             </nav>
         </div>
