--- a/contacto.html
+++ b/contacto.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es"
-   <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VITA KIDS - Contacto</title>
@@ -34,10 +34,15 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="inicio.html" class="nav-link">Inicio</a></li>
                     <li class="nav-item"><a href="institucional.html" class="nav-link">Institucional</a></li>
-                    <li class="nav-item"><a href="contacto.html" class="nav-link active">Contacto</a></li>
                     <li class="nav-item"><a href="especialidades.html" class="nav-link">Especialidades</a></li>
                     <li class="nav-item"><a href="obras-sociales.html" class="nav-link">Obras Sociales</a></li>
+                    <li class="nav-item"><a href="contacto.html" class="nav-link active">Contacto</a></li>
                     <li class="nav-item"><a href="turnos.html" class="nav-link">Solicitar Turno</a></li>
+                    <li class="nav-item">
+                        <a href="login.html" class="nav-link">
+                          <i class="fas fa-user-circle fa-lg"></i> <span class="ms-1">LogIn</span>
+                        </a>
+                    </li> 
                 </ul>
             </nav>
         </div>
