Implementación completa de gestión de médicos y staff

--- a/medicos.html
+++ b/medicos.html
@@ -59,7 +59,7 @@
               <form id="medicoForm" class="row g-3">
                 <div class="col-md-4">
                   <label for="id" class="form-label">ID</label>
-                  <input type="text" name="id" id="id" class="form-control" required />
+                  <input type="text" name="id" id="id" class="form-control" />
                 </div>
                 <div class="col-md-4">
                   <label for="matricula" class="form-label">Matrícula Profesional</label>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col-md-6">
                   <label for="obrasSociales" class="form-label">Obras Sociales que acepta</label>
-                  <select name="obrasSociales[]" id="obrasSocialesId" class="form-select" multiple required>
+                  <select name="obrasSociales" id="obrasSocialesId" class="form-select" multiple required>
                     <option value="101">OSDE</option>
                     <option value="102">OSPE</option>
                     <option value="103">Swiss Medical</option>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col-md-6">
                   <label for="fotografia" class="form-label">Fotografía</label>
-                  <input type="file" name="fotografia" id="fotografia" class="form-control" accept="image/*" />
+                  <input type="url" name="fotografia" id="fotografia" class="form-control" placeholder="https://ejemplo.com/foto.jpg" />
                 </div>
                 <div class="col-12 text-end">
                   <button type="submit" class="btn btn-verde">Guardar</button>
@@ -140,9 +140,10 @@
                     <th>Valor Consulta</th>
                     <th>Obras Sociales</th>
                     <th>Fotografía</th>
+                    <th class="text-center">Acciones</th> 
                   </tr>
                 </thead>
-                <tbody></tbody>
+                <tbody id="tabla-medicos-body"></tbody>
               </table>
             </div>
           </div>
@@ -172,7 +173,7 @@
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
       <!-- TomSelector JS -->
     <script src="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/js/tom-select.complete.min.js"></script>  
-    <script>
+    <!-- <script>
       // Lista de selectores que usarán Tom Select
       const selects = ["#especialidadId", "#obrasSocialesId"];
     
@@ -188,7 +189,9 @@
           }
         });
       });
-    </script>
+    </script> -->
+
+    <script src="js/admin.js" type="module"></script>
     
 </body>
 </html>
