--- a/medicos.html
+++ b/medicos.html
@@ -66,7 +66,7 @@
               <form id="medicoForm" class="row g-3">
                 <div class="col-md-4">
                   <label for="id" class="form-label">ID</label>
-                  <input type="text" name="id" id="id" class="form-control" />
+                  <input type="text" id="id" class="form-control" readonly>
                 </div>
                 <div class="col-md-4">
                   <label for="matricula" class="form-label">Matrícula Profesional</label>
@@ -77,8 +77,8 @@
                   <select name="especialidadId" id="especialidadId" class="form-select" required>
                     <option value="">Seleccione una Especialidad</option>
                     <option value="1">Pediatría General</option>
-                    <option value="2">Neurología pediátrica</option>
-                    <option value="3">Cardiología pediátrica</option>
+                    <option value="2">Neurología Pediátrica</option>
+                    <option value="3">Cardiología Pediátrica</option>
                     <option value="4">Psicología Infantil</option>
                     <option value="5">Psicopedagogía</option>
                     <option value="6">Fonoaudiología</option>
@@ -86,6 +86,7 @@
                     <option value="8">Fisioterapia Infantil</option>
                     <option value="9">Nutrición Infantil</option>
                     <option value="10">Odontopediatría</option>
+                    <option value="11">Análisis Clínicos</option>
                   </select>
                 </div>
                 <div class="col-md-6">
@@ -102,7 +103,7 @@
                 </div>
                 <div class="col-md-6">
                   <label for="obrasSociales" class="form-label">Obras Sociales que acepta</label>
-                  <select name="obrasSociales" id="obrasSocialesId" class="form-select" multiple required>
+                  <select name="obrasSociales" id="obrasSocialesId" class="form-select">
                     <option value="101">OSDE</option>
                     <option value="102">OSPE</option>
                     <option value="103">Swiss Medical</option>
@@ -123,14 +124,17 @@
                 </div>
                 <div class="col-md-6">
                   <label for="fotografia" class="form-label">Fotografía</label>
-                  <input type="url" name="fotografia" id="fotografia" class="form-control" placeholder="https://ejemplo.com/foto.jpg" />
+                  <input type="text" id="fotografia" class="form-control" required placeholder="Ej: imagenes/nombre_foto.jpg">
+
                 </div>
                 <div class="col-12 text-end">
-                  <button type="submit" class="btn btn-verde">Guardar</button>
+                  <button type="submit" class="btn btn-verde me-2">Guardar</button>
+                  <button type="button" id="btnLimpiar" class="btn btn-verde">🧹 Limpiar</button>
                 </div>
               </form>
             </div>
           </div>
+          <div id="mensajes"></div>
     
           <!-- Tabla -->
           <div class="card shadow-sm">
@@ -180,8 +184,7 @@
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
       <!-- TomSelector JS -->
     <script src="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/js/tom-select.complete.min.js"></script>  
-
-
+    <!-- Archivo JS con funcionalidades -->
     <script src="js/admin.js" type="module"></script>
     
 </body>
