--- a/login.html
+++ b/login.html
@@ -92,8 +92,7 @@
     <!-- Bootstrap JS -->
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Archivos JS -->
-    <script src="config/usuarios.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/superadmin.js"></script>
      
 </body>
 </html>
