--- a/medicos.html
+++ b/medicos.html
@@ -13,13 +13,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/css/tom-select.bootstrap5.min.css" rel="stylesheet" /> 
-  <script>
-      const usuarioActivo = JSON.parse(sessionStorage.getItem("usuarioActivo"));
-      if(!usuarioActivo){
-        alert("Acceso no autorizado. Serás redirigido a inicio.");
-        window.location.href = "inicio.html";
+    <script>
+      // Verificar el accessToken en lugar de "usuarioActivo"
+      const token = sessionStorage.getItem("accessToken");
+
+      if (!token) {
+        alert("Acceso no autorizado. Debe iniciar sesión.");
+        // Lo redirigimos al login, no al inicio.
+        window.location.href = "login.html";
       }
-    </script>
+  </script>
 </head>
 
 <body>
@@ -42,10 +45,12 @@
             <nav class="collapse navbar-collapse" id="menuNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="medicos.html" class="nav-link active">Médicos</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Especialidades</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Turnos</a></li>
+                    <li class="nav-item"><a href="admin-turnos.html" class="nav-link">Turnos</a></li>
+                    <li class="nav-item"><a href="reservas.html" class="nav-link">Reservas</a></li>
+                    <li class="nav-item"><a href="admin-especialidades.html" class="nav-link">Especialidades</a></li>
+                    <li class="nav-item"><a href="admin-usuarios.html" class="nav-link">Usuarios</a></li>
                     <li class="nav-item">
-                      <a href="inicio.html" class="nav-link">
+                      <a href="#" class="nav-link" id = logoutBtn>
                         <i class="fas fa-sign-out-alt"></i> Salida
                       </a>
                     </li>
@@ -186,6 +191,18 @@
     <script src="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/js/tom-select.complete.min.js"></script>  
     <!-- Archivo JS con funcionalidades -->
     <script src="js/admin.js" type="module"></script>
+
+    <script>
+      document.getElementById('logoutBtn').addEventListener('click', (e) => {
+          e.preventDefault();
+          // Eliminar el token de sesión
+          sessionStorage.removeItem('accessToken');
+          sessionStorage.removeItem('usuarioNombre'); 
+          alert('Sesión cerrada. Serás redirigido al inicio.');
+          // Redirigir al login o al inicio
+          window.location.href = 'inicio.html'; 
+      });
+    </script>
     
 </body>
 </html>
