todos-los-cambios

--- a/login.html
+++ b/login.html
@@ -93,7 +93,8 @@
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Archivos JS -->
     <script src="config/usuarios.js"></script>
-    <script src="js/login.js"></script>
+    <script src="./js/superadmin.js"></script>
+    <script src="./js/login.js"></script>
      
 </body>
 </html>
