--- a/obras-sociales.html
+++ b/obras-sociales.html
@@ -57,9 +57,9 @@
     </div>
 
    <section class="container py-5">
-            <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 g-4">
+            <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 g-4" id="obras-sociales-container">
                 
-              <div class="col">
+              <!-- <div class="col">
                 <a href="https://www.osde.com.ar" target="_blank" class="logo-card">
                     <img src="imagenes/osde.png" alt="OSDE" class="img-fluid">
                 </a>
@@ -129,7 +129,7 @@
                 <a href="https://www.accordsalud.com.ar/" target="_blank" class="logo-card">
                     <img src="imagenes/accord.png" alt="accord" class="img-fluid">
                 </a>
-            </div>
+            </div> -->
         </div>
 
     </section>
@@ -158,6 +158,7 @@
   </main>
           
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./js/obras-sociales.js"></script>
 </body>
 
 </html>
