Implementa flujo completo de turnos y página de contacto

--- a/admin-reservas.html
+++ b/admin-reservas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administración de Turnos - VITA KIDS</title>
+    <title>Administración de Reservas - VITA KIDS</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -30,7 +30,8 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="medicos.html" class="nav-link">Médicos</a></li>
                     <li class="nav-item"><a href="admin-usuarios.html" class="nav-link">Usuarios</a></li>
-                    <li class="nav-item"><a href="admin-turnos.html" class="nav-link active">Turnos</a></li>
+                    <li class="nav-item"><a href="admin-turnos.html" class="nav-link">Turnos</a></li>
+                    <li class="nav-item"><a href="admin-reservas.html" class="nav-link active">Reservas</a></li>
                      <li class="nav-item"><a href="admin-obras-sociales.html" class="nav-link">Obras Sociales</a></li>
                     <li class="nav-item"><a href="admin-especialidades.html" class="nav-link">Especialidades</a></li>
                     <li class="nav-item">
