agrego institucional, obras sociales, admin obras sociales con sus js

--- a/institucional.html
+++ b/institucional.html
@@ -49,14 +49,16 @@
             </nav>
         </div>
     </header>
-
-        <main class="container py-5">
+  
+    <main class="container py-5">
     <section class="text-center mb-5">
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <h2>¿Quiénes Somos?</h2>
+                <h2>Nuestra Historia</h2>
                 <p class="lead">
-                    Somos un centro integral dedicado a la salud y el desarrollo infantil. En Vita Kids brindamos atención pediátrica, terapéutica y especializada para apoyar el crecimiento saludable de los niños.
+                    Vita Kids nació hace 15 años con el sueño de crear un espacio donde la salud y el desarrollo infantil fueran acompañados de manera integral, profesional y humana. Surgimos de la vocación compartida de un grupo de especialistas en pediatría y terapias del desarrollo, comprometidos con brindar una atención cercana y de calidad a cada familia.</p>
+
+                <p class="lead"> Con el paso del tiempo, fuimos creciendo junto a nuestros pacientes, incorporando nuevas áreas, profesionales y tecnologías que nos permiten ofrecer una atención cada vez más completa. Hoy, VitaKids es un referente en el cuidado de la infancia, donde cada niño es atendido con empatía, respeto y dedicación, y cada familia encuentra un equipo que acompaña cada etapa del crecimiento con compromiso y calidez.
                 </p>
             </div>
         </div>
@@ -65,15 +67,19 @@
     <section class="mb-5">
         <div class="row text-center">
             <div class="col-md-6 mb-4">
-                <div class="p-4 border rounded-3 h-100 shadow-sm">
-                    <i class="fas fa-bullseye fa-3x mb-3" style="color: #388E3C"></i>
+                <div class="p-4 card-mv  h-100 shadow-sm">
+                    <div>
+                        <i class="fas fa-bullseye fa-3x mb-3" style="color: #388E3C"></i>
+                    </div>
                     <h2 class="h3">Misión</h2>
                     <p>Ofrecer servicios de salud y desarrollo infantil con calidad, calidez y compromiso, promoviendo el bienestar integral de cada niño y su familia.</p>
                 </div>
             </div>
             <div class="col-md-6 mb-4">
-                <div class="p-4 border rounded-3 h-100 shadow-sm">
-                    <i class="fas fa-eye fa-3x mb-3" style="color: #388E3C"></i>
+                <div class="p-4 card-mv  h-100 shadow-sm">
+                    <div>
+                        <i class="fas fa-eye fa-3x mb-3" style="color: #388E3C"></i>
+                    </div>
                     <h2 class="h3">Visión</h2>
                     <p>Ser un centro reconocido por su excelencia en atención pediátrica y terapéutica, contribuyendo al desarrollo pleno de la infancia en nuestra comunidad.</p>
                 </div>
@@ -104,7 +110,7 @@
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <i class="fas fa-users fa-2x text-secondary mb-2"></i>
-                        <h5 class="card-title">Respeto</h5>
+                        <h5 class="card-title">Profesionalismo</h5>
                     </div>
                 </div>
             </div>
