--- a/medicos.html
+++ b/medicos.html
@@ -45,16 +45,16 @@
             <nav class="collapse navbar-collapse" id="menuNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="medicos.html" class="nav-link active">Médicos</a></li>
-                    <li class="nav-item"><a href="admin-turnos.html" class="nav-link">Turnos</a></li>
-                    <li class="nav-item"><a href="reservas.html" class="nav-link">Reservas</a></li>
-                    <li class="nav-item"><a href="admin-especialidades.html" class="nav-link">Especialidades</a></li>
                     <li class="nav-item"><a href="admin-usuarios.html" class="nav-link">Usuarios</a></li>
+                    <li class="nav-item"><a href="admin-turnos.html" class="nav-link">Turnos</a></li>
+                    <li class="nav-item"><a href="admin-reservas.html" class="nav-link">Reservas</a></li>
+                     <li class="nav-item"><a href="admin-obras-sociales.html" class="nav-link">Obras Sociales</a></li>
+                    <li class="nav-item"><a href="admin-especialidades.html" class="nav-link">Especialidades</a></li>
                     <li class="nav-item">
                       <a href="#" class="nav-link" id = logoutBtn>
                         <i class="fas fa-sign-out-alt"></i> Salida
                       </a>
                     </li>
-                    
                 </ul>
             </nav>
         </div>
